[gd_scene load_steps=13 format=3 uid="uid://d206d61a3wyu7"]

[ext_resource type="Script" path="res://santa_boss.gd" id="1_pt26p"]
[ext_resource type="PackedScene" uid="uid://biyhe8708ekvf" path="res://scenes/santa_attack.tscn" id="2_072o3"]
[ext_resource type="Texture2D" uid="uid://dya81qxm1vppd" path="res://assets/santa-boss.png" id="2_wieqm"]
[ext_resource type="AudioStream" uid="uid://dq2ingyeob5qo" path="res://assets/audio/santa_damage.wav" id="4_0pxoj"]
[ext_resource type="Texture2D" uid="uid://djhoj8ii37x8n" path="res://assets/santa_fuck.png" id="5_l02g5"]

[sub_resource type="Gradient" id="Gradient_22m5e"]
offsets = PackedFloat32Array(0, 0.692568)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6tlbx"]
gradient = SubResource("Gradient_22m5e")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_ura1y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0auxy"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 15), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8lusl"]
resource_name = "death"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6.86667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 120)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6.83333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bw722"]
_data = {
"RESET": SubResource("Animation_ura1y"),
"death": SubResource("Animation_8lusl"),
"idle": SubResource("Animation_0auxy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmb1t"]
size = Vector2(144, 58)

[node name="santa-boss" type="Node2D"]
z_index = -2
script = ExtResource("1_pt26p")
time_min = 1.0
time_max = 3.0
attack = ExtResource("2_072o3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wieqm")

[node name="PointLight2D" type="PointLight2D" parent="Sprite2D"]
position = Vector2(-48, 21.4215)
color = Color(0.768627, 0.223529, 0.223529, 1)
energy = 2.0
texture = SubResource("GradientTexture2D_6tlbx")

[node name="PointLight2D2" type="PointLight2D" parent="Sprite2D"]
position = Vector2(48, 21.4215)
color = Color(0.768627, 0.223529, 0.223529, 1)
energy = 2.0
texture = SubResource("GradientTexture2D_6tlbx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bw722")
}
autoplay = "idle"

[node name="santa_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="santa_area"]
position = Vector2(0, 19)
shape = SubResource("RectangleShape2D_rmb1t")

[node name="attack_position" type="Node2D" parent="."]
position = Vector2(-64, 56)

[node name="attack_position2" type="Node2D" parent="."]
position = Vector2(-48, 56)

[node name="attack_position3" type="Node2D" parent="."]
position = Vector2(-32, 56)

[node name="attack_position4" type="Node2D" parent="."]
position = Vector2(-16, 56)

[node name="attack_position5" type="Node2D" parent="."]
position = Vector2(0, 56)

[node name="attack_position6" type="Node2D" parent="."]
position = Vector2(16, 56)

[node name="attack_position7" type="Node2D" parent="."]
position = Vector2(32, 56)

[node name="attack_position8" type="Node2D" parent="."]
position = Vector2(48, 56)

[node name="attack_position9" type="Node2D" parent="."]
position = Vector2(64, 56)

[node name="attack_timer" type="Timer" parent="."]
one_shot = true

[node name="damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0pxoj")

[node name="Fuck" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 96)
texture = ExtResource("5_l02g5")
offset = Vector2(0, 32)

[node name="end_game_delay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="santa_area" to="." method="_on_santa_area_area_entered"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="end_game_delay" to="." method="_on_end_game_delay_timeout"]
